Fix spacing on projects page

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -185,8 +185,7 @@ hr.separator {
 
 .projects {
   &__entry {
-    margin-top: 15px;
-    margin-bottom: 15px;
+    height: 100%;
   }
 
   &--links {
